hard-gists/5472885/run.log
=== Docker Run Log for 5472885 ===
Started at: Mi 29. Okt 15:42:30 CET 2025

[2025-10-29 15:42:31] START: Running container for 5472885
[2025-10-29 15:42:31] SUCCESS: Container e71ae9e8f69e59a54cbf1278c5e0004d0fbcd20c372076c6b904784e4320e5c0 started for 5472885
=== Container logs for 5472885 ===
  File "/snippet.py", line 47
    print lVal
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5472885 ===
[2025-10-29 15:42:33] INFO: Container e71ae9e8f69e59a54cbf1278c5e0004d0fbcd20c372076c6b904784e4320e5c0 has stopped
